styles: fix gaps in navbar

--- a/src/css/overrides.scss
+++ b/src/css/overrides.scss
@@ -149,8 +149,12 @@
     height: 48px;
   }
 
+  &__items {
+    display: flex;
+    gap: 24px;
+  }
+
   &__link {
     padding: 0;
-    margin-right: 24px;
   }
 }
